# otus-rust

./: README.md
hw2/: hw2.md
hw3/: readme.md
hw3/smarthome/src/: lib.rs  tests.rs
hw3/smarthome/src/device/: thermometr.rs
hw3/smarthome/tests/: integration_test.rs
hw4/: hw4.md
hw4/smarthome/: Cargo.toml
hw4/smarthome/src/: error.rs  home.rs  lib.rs  room.rs  tests.rs
hw4/smarthome/src/device/: mod.rs  smartsocket.rs  thermometr.rs
hw5/: hw5.md
hw5/smarthome/src/: error.rs  lib.rs
hw6/: Cargo.toml  hw6.md
hw6/smarthome/: Cargo.toml
hw6/smarthome/examples/: mock_smartsocket.rs
hw6/smarthome/src/: error.rs  home.rs  lib.rs  tests.rs
hw6/smarthome/src/device/: mod.rs  smartsocket.rs  thermometr.rs
hw6/smarthome/src/device/smartsocket/protocol/: client.rs
hw7/: hw7.md
hw7/smarthome/src/: lib.rs  room.rs  tests.rs
hw7/smarthome/src/device/: mod.rs  thermometr.rs
hw7/smarthome/src/device/smartsocket/mock/: smartsocket.rs
hw8/: readme.md
hw8/smarthome/: Cargo.toml
hw8/smarthome/examples/: mock_smartsocket.rs  mock_thermometr.rs
hw8/smarthome/src/: error.rs  home.rs  lib.rs  room.rs  tests.rs
hw8/smarthome/src/device/: mod.rs  thermometr.rs
hw8/smarthome/src/device/smartsocket/: mod.rs
hw8/smarthome/src/device/smartsocket/mock/: mod.rs  server.rs
hw8/smarthome/src/device/smartsocket/protocol/: client.rs  mod.rs
lesson1/guessing_game/src/: main.rs
