[package]
name = "smarthome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
num_enum = "0.5.7"
paste = "1.0.6"
time = "0.3.7"
tokio = { version = "1.17.0", features = ["full"] }
futures = { version = "0.3.21" }
